[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edata"
version = "0.1.0"
description = "CLI tool for working with E-Data portal"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Renat Nasridinov" }
]

dependencies = [
    requests, sqlite3, urllib3
]

[project.scripts]
edata = "edata.extractor:main"
